// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_490"
    role="presentation"
  >
    <div
      id="defaultTabbableElement_491"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone492"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_490"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_490"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone493"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="First"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #0078d4;
                              border-color: #0078d4;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #0078d4, #0078d4);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        First
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Second"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #002050;
                              border-color: #002050;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #002050, #002050);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Second
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Third"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #00188f;
                              border-color: #00188f;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #00188f, #00188f);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Third
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_497"
    role="presentation"
  >
    <div
      id="defaultTabbableElement_498"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone499"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_497"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_497"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone500"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="First"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #0078d4;
                              border-color: #0078d4;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #0078d4, #0078d4);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        First
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Second"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #002050;
                              border-color: #002050;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #002050, #002050);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Second
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Third"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #00188f;
                              border-color: #00188f;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #00188f, #00188f);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Third
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should reflect theme change 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background: #1b1a19;
          color: #f3f2f1;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      class=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-direction: column;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: 100%;
            overflow: hidden;
            width: 100%;
          }
      id="chart_507"
      role="presentation"
    >
      <div
        id="defaultTabbableElement_508"
      />
      <div
        class=
            ms-FocusZone
            &:focus {
              outline: none;
            }
            {
              overflow: auto;
            }
        data-focuszone-id="FocusZone509"
      >
        <svg
          focusable="false"
          height="0"
          style="display: block;"
          width="0"
        >
          <g
            class=

                & text {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #f3f2f1;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 10px;
                  font-weight: 600;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                  fill: rgb(179, 179, 179);
                }
                & line {
                  opacity: 0.2;
                  stroke: #f3f2f1;
                  width: 1px;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                  opacity: 0.1;
                  stroke: rgb(179, 179, 179);
                }
                & path {
                  display: none;
                }
            id="xAxisGElementchart_507"
            transform="translate(0, -35)"
          />
          <g
            class=

                & text {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #f3f2f1;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 10px;
                  font-weight: 600;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                  fill: rgb(179, 179, 179);
                }
                & path {
                  display: none;
                }
                & line {
                  opacity: 0.2;
                  stroke: #f3f2f1;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                  opacity: 0.1;
                  stroke: rgb(179, 179, 179);
                }
            id="yAxisGElementchart_507"
            transform="translate(40, 0)"
          />
          <g>
             
             
             
          </g>
        </svg>
      </div>
      <div
        class=

            {
              margin-left: 20px;
              margin-top: 8px;
            }
      >
        <div
          class=

              {
                align-items: center;
                margin-bottom: 0;
                margin-left: -8px;
                margin-right: 0;
                margin-top: -8px;
                white-space: nowrap;
                width: 100%;
              }
        >
          <div>
            <div
              style="position: relative;"
            >
              <div
                data-automation-id="visibleContent"
                style="position: fixed; visibility: hidden;"
              >
                <div
                  aria-label="Legends"
                  aria-multiselectable="false"
                  class=
                      ms-FocusZone
                      &:focus {
                        outline: none;
                      }
                  data-focuszone-id="FocusZone510"
                  role="listbox"
                >
                  <div
                    class=
                        ms-OverflowSet
                        {
                          display: flex;
                          flex-wrap: wrap;
                          justify-content: unset;
                          position: relative;
                        }
                    role="group"
                  >
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="First"
                        aria-posinset="1"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class=

                              {
                                background-color: #0078d4;
                                border-color: #0078d4;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, #0078d4, #0078d4);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          First
                        </div>
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="Second"
                        aria-posinset="2"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                background-color: #002050;
                                border-color: #002050;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, #002050, #002050);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          Second
                        </div>
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="Third"
                        aria-posinset="3"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                background-color: #00188f;
                                border-color: #00188f;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, #00188f, #00188f);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          Third
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Vertical bar chart re-rendering Should re-render the vertical bar chart with data 1`] = `
<div>
  <div
    aria-label="Graph has no data to display"
    id="_VBC_empty513"
    role="alert"
    style="opacity: 0;"
  />
</div>
`;

exports[`Vertical bar chart re-rendering Should re-render the vertical bar chart with data 2`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_514"
    role="presentation"
  >
    <div
      id="defaultTabbableElement_515"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone516"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_514"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_514"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone517"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="First"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #0078d4;
                              border-color: #0078d4;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #0078d4, #0078d4);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        First
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Second"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #002050;
                              border-color: #002050;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #002050, #002050);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Second
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Third"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #00188f;
                              border-color: #00188f;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #00188f, #00188f);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Third
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Vertical bar chart rendering Should render the vertical bar chart with numeric x-axis data 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_3"
    role="presentation"
  >
    <div
      id="defaultTabbableElement_4"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone5"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_3"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_3"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone6"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="First"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #0078d4;
                              border-color: #0078d4;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #0078d4, #0078d4);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        First
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Second"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #002050;
                              border-color: #002050;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #002050, #002050);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Second
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="Third"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #00188f;
                              border-color: #00188f;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #00188f, #00188f);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        Third
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Vertical bar chart rendering Should render the vertical bar chart with string x-axis data 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_10"
    role="presentation"
  >
    <div
      id="defaultTabbableElement_11"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone12"
    >
      <svg
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_10"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_10"
          transform="translate(40, 0)"
        />
        <g>
           
           
           
           
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone13"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="4"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #627CEF;
                              border-color: #627CEF;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #627CEF, #627CEF);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="4"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #C19C00;
                              border-color: #C19C00;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #C19C00, #C19C00);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="4"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #E650AF;
                              border-color: #E650AF;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #E650AF, #E650AF);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="undefined"
                      aria-posinset="4"
                      aria-selected="false"
                      aria-setsize="4"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: #0E7878;
                              border-color: #0E7878;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #0E7878, #0E7878);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
